# nexus-physics

./: .gitignore  Addendum  Cargo.toml  PRD  PRD.md  README.md  package.json
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: wasm.rs
core/: Cargo.toml
core/src/: lib.rs  world.rs
examples/threejs-client/: index.html  package.json  tsconfig.json  vite.config.ts
examples/threejs-client/src/: main.ts
npm/: README.md  package.json
scripts/: build-npm.mjs  publish-npm.sh
