[package]
name = "nexus-physics-wasm"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nexus-physics-core = { path = "../../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-sign-ext", "--enable-nontrapping-float-to-int"]
